Revision history for perl distribution Convos

6.38 Not Released
 - Converted file upload into a core feature
 - Removed back compat /paste/:email_hash/:file_hash URL
 - Using "npm" (instead of "pnpm") to install node modules

6.37 2021-10-19T20:06:00+0900
 - Fix not having to enable and then disable notifications to disable notifications

6.36 2021-10-19T11:52:00+0900
 - Using convos/convos:base as base image to fix builds #624

6.35 2021-10-18T23:27:00+0900
 - Bumped Alpine version to 3.14
 - Fix "ReferenceError: body is not defined" #625

6.34 2021-10-18T11:00:00+0900
 - Going to build docker "stable" and "vX.XX" as linux/amd64 and linux/arm64,
   while "alpha" will be linux/amd64 only

6.33 2021-10-18T10:48:00+0900
 - Fix parsing links that end with a unicode character #563

6.32 2021-10-14T08:45:00+0900
 - Fix vulnerability: Cannot upload svg with javascript #623
 - Add support for password for default connection channel #621
 - Add progress bar for uploads

6.31 2021-10-02T06:51:00+0900
 - Fix turning channel names with "-" into links
 - Have to build a different tag for arm64 (for now) #464

6.30 2021-09-25T18:30:00+0900
 - Fix not making links inside links when #fragments are seen

6.29 2021-09-25T18:18:00+0900
 - Fix decoding/encoding password and username for connections #620
 - Fix trying to connect if wanted_state is "connected"
 - Fix "Facts" bot action to only reply if the fact ends with "?"
 - Add channel names are now clickable
 - Add AWAY message to WHOIS response #360
 - Add /away command #360
 - Add more connection states: connecting and disconnecting
 - Add server messages when connections state changes
 - Add "Retry" button to loading screen

6.28 2021-09-12T15:38:00+0200
 - Fix notifications styling when channel changes
 - Add styling for conversations with notifications
 - Will update unread/notifications on conversation load, instead of unload

6.27 2021-08-28T16:52:00+0200
 - Changed notifications are now per channel #612